--- a/idea-plugin/parts/pluginChanges.html
+++ b/idea-plugin/parts/pluginChanges.html
@@ -1,4 +1,4 @@
-<a href="https://github.com/tangcent/easy-yapi/releases/tag/v2.4.4">v2.4.4.191.0(2022-07-31)</a>
+<a href="https://github.com/ChengHaoHappy/easy-yapi/releases/tag/v1.0.0">v1.0.0</a>
 <br/>
 <a href="https://github.com/tangcent/easy-yapi/blob/master/IDEA_CHANGELOG.md">Full Changelog</a>
 <ul>fix:
